kubernetes/kube-lab/apps/argo-system/argo-workflows/app/http-route.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Kubernetes-native Workflow Engine
    gethomepage.dev/group: Development
    gethomepage.dev/icon: argo-cd
    gethomepage.dev/name: Argo Workflows
    gethomepage.dev/pod-selector: app.kubernetes.io/name=argo-workflows-server
    external-dns/unifi: "true"
spec:
  hostnames:
    - argo-workflows.techtales.io
  parentRefs:
    - name: cilium
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: argo-workflows-server
          port: 2746
      matches:
        - path:
            type: PathPrefix
            value: /
